HtmlSanityCheck - ChangeLog


V.0.9.7
May 3rd 2017: Fix broken logos in reports. #149
May 3rd 2017: Clean up three logging statements.

V.0.9.6
Dec 13th 2016: Fix absolute local image check. #130
Dec 12th 2016: Gradle plugin sends output to info log.
April 8th 2016: Add JUnit XML reporting to support automated tools.

V.0.9.3
June 14th 2015: published on Gradle Plugin Repository
May 14th 2015: reverted subproject structure, as it lead to numerous build problems.

V.0.8.0 could not be published on Bintray due to these issues.



V.0.8.0-SNAPSHOT
restructured code into several gradle subprojects.

#29 detect some more variants of URLs, e.g. IP-address prefixed etc.
#42 reference counter for "missing local ref checker"
#60 upgraded to jsoup parser v. 1.8.1 (from 1.7.3)
#62 upgraded to AsciiDoctor-Gradle-Plugin-1.5.2 (from 1.5.0)
#65 nicer message for reference-counter
#66 log message now have appropriate level (most are .debug now)
#68 corrected reference counter for broken cross references (n occurrences are now counted as n issues)


V.0.5.3 (first public version)
functional as Gradle-plugin