@@ -21,7 +21,7 @@ buildscript {
 plugins {
     id 'com.gradle.build-scan' version '1.3'
     id 'org.asciidoctor.convert' version '1.5.3'
-    id "org.sonarqube" version "1.0"
+   // id "org.sonarqube" version "1.0"
     id "nebula.lint" version "6.1.4"
     id "com.github.ben-manes.versions" version "0.13.0"
 }
@@ -60,18 +60,6 @@ apply plugin: "com.gradle.plugin-publish"
 apply plugin: 'maven-publish'
 apply from: "config/publish-snapshot.gradle"
 
-// determine test coverage
-apply from: "config/coverage.gradle"
-
-// findbugs, jdepend, codenarc
-apply from: "config/code-quality.gradle"
-
-// calculate groovy metrics
-apply from: "config/gmetrics.gradle"
-
-// invoke sonar runner
-apply from: "config/sonarqube.gradle"
-// end:BuildPlugins[]
 
 
 dependencies {
