@@ -1,70 +1,0 @@
-/*
- * Copyright 2014 the original author or authors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-apply plugin: 'findbugs'
-apply plugin: 'jdepend'
-apply plugin: 'codenarc'
-
-
-codenarc {
-    configFile = file('config/codenarc.groovy')
-}
-// don't let codenarc violations break the build...
-[codenarcMain, codenarcTest]*.ignoreFailures = true
-
-
-def configDir = new File(buildscript.sourceFile.parentFile.parentFile, 'config')
-ext.checkstyleConfigDir = "$configDir/checkstyle"
-
-findbugs {
-    toolVersion = '3.0.1'
-    sourceSets = [sourceSets.main]
-    ignoreFailures = true
-    reportsDir = file("$project.buildDir/reports/findbugs")
-    effort = 'max'
-    reportLevel = 'high'
-}
-
-findbugsMain {
-    reports {
-        xml.enabled = false
-        html.enabled = true
-    }
-}
-
-findbugsTest {
-    reports {
-        xml.enabled = false
-        html.enabled = true
-    }
-}
-
-jdepend {
-    toolVersion = '2.9.1'
-    sourceSets = [sourceSets.main]
-    ignoreFailures = true
-    reportsDir = file("$project.buildDir/reports/jdepend")
-}
-
-
-if (project.plugins.hasPlugin('groovy')) {
-    apply plugin: 'codenarc'
-
-    codenarc {
-        ignoreFailures = true
-        configFile = file("$configDir/codenarc/codenarc.groovy")
-    }
-}
