@@ -1,26 +1,0 @@
-apply plugin: 'jacoco'
-
-jacoco {
-    // previous version:
-    toolVersion = "0.7.4.201502262128"
-    // new version, NOT COMPABIBLE WITH SONAR
-    // toolVersion = jacocoVersion
-}
-
-jacocoTestReport {
-    dependsOn "test"
-
-    group = "Reporting"
-    description = "Generate Jacoco coverage reports after running tests."
-
-    // additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
-
-
-    reports {
-        xml.enabled = true
-        csv.enabled = false
-        html.enabled = true
-    }
-}
-
-
