@@ -1,7 +1,0 @@
-
-
-// ###############################
-//
-// AsciiDoc stuff
-//
-// ###############################
