@@ -1,11 +1,0 @@
-
-// invoke sonar runner
-apply plugin: "org.sonarqube"
-
-sonarqube {
-    properties {
-        property "sonar.projectKey", "htmlSanityCheck"
-        //property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
-    }
-}
-
