@@ -4,12 +4,6 @@ sourceCompatibility=1.7
 targetCompatibility=1.7
 
 
-jacocoVersion = 0.7.5.201505241946
-
-systemProp.sonar.host.url=http://localhost:9000
-systemProp.sonar.jdbc.url=jdbc:postgresql://localhost/sonar
-systemProp.sonar.jdbc.username=sonar
-systemProp.sonar.jdbc.password=sonar
 
 org.gradle.parallel=true
 
